--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <div class="config-perfil">
                 <a href="#"><i class="fa-solid fa-gear"></i></a>
-                 <img src="img/logostivpeque.jpg" alt="">
+                 <img class="perfil" src="img/logostivpeque.jpg" alt="">
             </div>
         </div>
 
@@ -155,7 +155,7 @@
 
 
 <!-- menssages -->
-        <div class="menssages-container">
+        <section class="menssages-container">
             <header class="menssages-header">
                 <div class="name-contain">
                     <img src="img/tonystarck.jpg" alt="">
@@ -181,7 +181,7 @@
                     <a href="#"><i class="fa-solid fa-microphone"></i></a>
                 </div>
             </footer>
-        </div>
+        </section>
 
     </div>
 
