--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="flex-container">
 
 <!-- Navbar container -->
-        <div class="navbar">
+        <nav class="navbar">
             <div class="nav-icons">
                  <div class="select">
                     <a href="#"><i class="fa-regular fa-message"></i></a>
@@ -31,7 +31,7 @@
                 <a href="#"><i class="fa-solid fa-gear"></i></a>
                  <img class="perfil" src="img/logostivpeque.jpg" alt="">
             </div>
-        </div>
+        </nav>
 
 
 <!-- Chats container -->
